# twitchroulette

./: .gitignore  Makefile
proto/twitchroulette/v1/: twitchroulette.proto
service/: Cargo.toml  Dockerfile  build.rs  sqlx-data.json
service/migrations/: 20210906190848_initial.sql
service/src/: database.rs  main.rs  scraper.rs  service.rs
ui/: .eslintrc.js  .prettierrc  genproto.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.common.js  webpack.config.dev.js
ui/src/: App.tsx  FilterState.tsx  HomePage.tsx  StreamPage.tsx  hooks.ts  index.html  index.tsx
ui/src/service/: index.ts
ui/src/service/twitchroulette/v1/: twitchroulette_pb.d.ts  twitchroulette_pb.js  twitchroulette_pb_service.d.ts  twitchroulette_pb_service.js
