[features]

[package]
name = "twitchroulette"
version = "0.1.0"
edition = "2018"

[dependencies]
tonic = "0.6.1"
tonic-reflection = "0.3.0"
prost = "0.9.0"
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
chrono = "0.4.0"
uuid = "0.8.2"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.45"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "uuid", "chrono", "postgres", "offline" ] }
futures = "0.3"
structopt = "0.3"

[build-dependencies]
tonic-build = "0.6.0"
